--- a/src/pages/overview-page-component/overview-component.scss
+++ b/src/pages/overview-page-component/overview-component.scss
@@ -114,4 +114,8 @@ page-overview {
     padding: 10px;
   }
 
+  .no-data {
+    text-align: center;
+  }
+
 }
